<resources>
    <string name="app_name">SAA Talk</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="open_nav_drawer">Open navigation drawer</string>
    <string name="close_nav_drawer">Close navigation drawer</string>
    <string name="title_activity_map">Map</string>
    <string name="univ_of_south">University of the South: Sewanee Tigers</string>
    <string name="centre_college_colonels">Centre College Colonels</string>
    <string name="oglethorpe_petrels">Oglethorpe University Petrels</string>
    <string name="bsc_panthers">Birmingham Southern College Panthers</string>
    <string name="berry_vikings">Berry College Vikings</string>
    <string name="hendrix_warriors">Hendrix College Warriors</string>
    <string name="millsaps_majors">Millsaps College Majors</string>
    <string name="rhodes_lynx">Rhodes College Lynx</string>
    <string name="settings">Settings</string>
    <string name="add_post">Add Post</string>
    <string name="change_flair">Change Flair</string>
    <string name="school_locations">School Locations</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="delete">Delete</string>
    <string name="comments">Comments</string>
    <string name="navigation_header">Navigation Header</string>
    <string name="talk_of_the_saa">TALK OF THE SAA</string>
    <string name="current_champion_rhodes_college_lynx">Current Champion: Rhodes College Lynx</string>
    <string name="email">email</string>
    <string name="moneymanziel_yahoo_com">moneyManziel@yahoo.com</string>
    <string name="password">Password</string>
    <string name="_123456">123456</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title">Title</string>
    <string name="write_your_post">Write your post...</string>
    <string name="send">Send</string>
    <string name="attach">Attach</string>
    <string name="write_your_comment">Write your comment...</string>
    <string name="color_for_comment">#283655</string>
    <string name="user_title">User:\u0020</string>
    <string name="post_uploaded">Post uploaded</string>
    <string name="can_not_implement">Can Not Implement</string>
    <string name="user_flair">User Flair</string>
    <string name="ok">OK</string>
    <string name="this_field_can_not_be_empty">This field can not be empty</string>
    <string name="loading_screen">Loading...</string>
    <string name="login_failed">Login failed:\u0020</string>
    <string name="wrong_login">Wrong login:\u0020</string>
    <string name="error">Error:\u0020</string>
    <string name="register_success">Register success</string>
    <string name="this_app_was_made_by_ck">This app was made by Carter King</string>
    <string name="hide">Hide</string>
    <string name="rhodes_college_toast">Rhodes College Lynx, Memphis TN.</string>
    <string name="sewanee_toast">University of the South: Sewanee Tigers, Franklin, TN.</string>
    <string name="centre_toast">Centre College Colonels, Danville, KY</string>
    <string name="oglethorpe_toast">Oglethorpe Univeristy Petrels, Atlanta, GA</string>
    <string name="bsc_toast">Birmingham Southern College Panthers, Birmingham, AL</string>
    <string name="berry_toast">Berry College Vikings, Berry, GA</string>
    <string name="hendrix_toast">Hendrix College Warriors, Conway, AR</string>
    <string name="millsaps_toast">Millsaps College Majors, Jackson, MS</string>
    <string name="create_flair">Create Flair</string>
    <string name="cancel">Cancel</string>
    <string name="user_flair_set">User Flair Set</string>
    <string name="comment_uploaded">Comment uploaded</string>
</resources>
