<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/add_post"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add_post" />
    <item
        android:id="@+id/flair"
        android:icon="@android:drawable/picture_frame"
        android:title="@string/change_flair" />
    <item
        android:id="@+id/school_locations"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/school_locations" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/logout" />
    <item
        android:id="@+id/about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/about" />


</menu>
