<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_write_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:maxLines="1"
        android:textColorHint="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/etBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_your_post"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:scrollHorizontally="false"
        android:textColorHint="@color/colorPrimaryDark" />


    <ImageView
        android:id="@+id/imgAttach"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btnAttach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attach"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>


</LinearLayout>